--- a/index.html
+++ b/index.html
@@ -6,9 +6,96 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./resources/css/reset.css">
-    <link rel="stylesheet" href="./resouces/css/style.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
 
+    <!-- Complete Header Unit -->
+    <header class="container"> <!-- Manage Site Width -->
+
+      <!-- Logo & Left side of Header -->
+      <div class="logo">
+        <div class="img-container">
+          <img src="./resources/images/ic-logo.svg" alt="Company Logo">
+        </div>
+        <span>Colmar Academy</span>
+      </div>
+
+      <!-- Nav & right side of header -->
+      <nav role="navigation">
+        <ul role="presentation">
+          <li><a href="#">On Campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For companies</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Main Content -->
+    <div class="content">
+
+      <!-- Main Banner -->
+      <div class="banner container">
+        <div class="img-container">
+          <img src="./resources/images/banner.jpg" alt="Reading and Writing at a picnic table">
+        </div>
+        <div class="headline">
+          <h1 class="title">Learn Something new everyday</h1>
+          <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+          <div class="button">
+            <span>Start here</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Information -->
+      <div class="information container">
+
+        <!-- Information Main -->
+        <div class="info-main">
+          <div class="img-container">
+            <img src="./resources/images/information-main.jpg" alt="Reading outside at a park">
+          </div>
+          <h1 class="title">It doesn't hurt to keep practicing</h1>
+          <p class="description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          <p class="source">Emanuel, Sr Strategist at Hiring.com</p>
+        </div>
+        <div class="info-secondary">
+          <div class="info orientation">
+            <div class="img-container">
+              <img src="./resources/images/information-orientation.jpg" alt="Overhead view of students walking">
+            </div>
+            <div class="data campus">
+              <h3 class="title">Orientation date</h3>
+              <p class="description">Tue 10/11 & Wed 11/12: 8am-3pm</p>
+              <span class="more">Read more</span>
+            </div>
+          </div>
+          <div class="info lecture">
+            <div class="img-container">
+              <img src="./resources/images/information-campus.jpg" alt="Classroom with hanging lights, and map of South America">
+            </div>
+            <div class="data">
+              <h3 class="title">Our Campus</h3>
+              <p class="description">Find which campus is close by you</p>
+              <span class="more">Read more</span>
+            </div>
+          </div>
+          <div class="info">
+            <div class="img-container">
+              <img src="./resources/images/information-guest-lecture.jpg" alt="Picture of Oliver Sack">
+            </div>
+            <div class="data">
+              <h3 class="title">Our guest lecture</h3>
+              <p class="description">Join a keynote with Oliver Sack about music in medical treatment</p>
+              <span class="more">Read more</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
   </body>
 </html>
