--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
           <p class="description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
           <p class="source">Emanuel, Sr Strategist at Hiring.com</p>
         </div>
-        <div class="info-secondary">
+        <div class="secondary">
           <div class="info orientation">
             <div class="img-container">
               <img src="./resources/images/information-orientation.jpg" alt="Overhead view of students walking">
             </div>
-            <div class="data campus">
+            <div class="data">
               <h3 class="title">Orientation date</h3>
               <p class="description">Tue 10/11 & Wed 11/12: 8am-3pm</p>
               <span class="more">Read more</span>
             </div>
           </div>
-          <div class="info lecture">
+          <div class="info campus">
             <div class="img-container">
               <img src="./resources/images/information-campus.jpg" alt="Classroom with hanging lights, and map of South America">
             </div>
@@ -82,7 +82,7 @@
               <span class="more">Read more</span>
             </div>
           </div>
-          <div class="info">
+          <div class="info lecture">
             <div class="img-container">
               <img src="./resources/images/information-guest-lecture.jpg" alt="Picture of Oliver Sack">
             </div>
@@ -96,6 +96,111 @@
 
       </div>
 
+      <!-- Course Information -->
+      <div class="course container">
+        <h1>Start learning</h1>
+
+        <!-- Flexbox that holds all course information -->
+        <div class="courses">
+
+          <!-- 6 Different Course Selections with img and details -->
+          <div class="courseinfo software">
+            <div class="img-container">
+              <img src="./resources/images/course-software.jpg" alt="Software Engineering Image">
+            </div>
+            <h3>Software engineering</h3>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+          <div class="courseinfo art">
+            <div class="img-container">
+              <img src="./resources/images/course-computer-art.jpg" alt="Computer Art Image">
+            </div>
+            <h3>Computer Art</h3>
+            <p>COURSES</p>
+            <p>Image & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
+          <div class="courseinfo design">
+            <div class="img-container">
+              <img src="./resources/images/course-design.jpg" alt="Design Image">
+            </div>
+            <h3>Desgin</h3>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Desgin</p>
+          </div>
+          <div class="courseinfo data">
+            <div class="img-container">
+              <img src="./resources/images/course-data.jpg" alt="Data Image">
+            </div>
+            <h3>Data</h3>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+          <div class="courseinfo business">
+            <div class="img-container">
+              <img src="./resources/images/course-business.jpg" alt="Business Image">
+            </div>
+            <h3>Business</h3>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+          <div class="courseinfo marketing">
+            <div class="img-container">
+              <img src="./resources/images/course-marketing.jpg" alt="Marketing Image">
+            </div>
+            <h3>Marketing</h3>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Thesis Exbit -->
+      <div class="thesis container">
+        <h1>Thesis exhibit</h1>
+
+        <!-- Main Video & description -->
+        <div class="mainvid">
+          <div class="vid-container">
+            <video src="./resources/videos/thesis.mp4" controls poster="posterimage.jpg">
+              The video failed to display.</video>
+          </div>
+          <h2 class="title">Reimagine urban</h2>
+          <p class="description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquem et commodo lectus, nec consequat neque. Sed non accumsen urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, tristique ligula."</p>
+        </div>
+        <div class="secondary">
+          <div class="info Prisma">
+            <div class="img-container">
+              <img src="./resources/images/thesis-fisma.jpg" alt="Fisma Thesis Image">
+            </div>
+            <div class="data">
+              <h3 class="title">Prisma: Design and Prototype</h3>
+              <p class="description">Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="info now-and-then">
+            <div class="img-container">
+              <img src="./resources/images/thesis-now-and-then.jpg" alt="Now and then Image">
+            </div>
+            <div class="data">
+              <h3 class="title">Now and then</h3>
+              <p class="description">Research study about New York</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer class="container">
+        <span class="copyright">&copy; Colmar Academy. All rights reserved</span>
+        <nav>
+          <ul>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </nav>
+
+      </footer>
     </div>
   </body>
 </html>
