--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./resources/css/reset.css">
@@ -18,7 +20,7 @@
         <div class="img-container">
           <img src="./resources/images/ic-logo.svg" alt="Company Logo">
         </div>
-        <span>Colmar Academy</span>
+        <span class="bold">COLMAR</span><span class="light">ACADEMY</span>
       </div>
 
       <!-- Nav & right side of header -->
@@ -67,7 +69,7 @@
               <img src="./resources/images/information-orientation.jpg" alt="Overhead view of students walking">
             </div>
             <div class="data">
-              <h3 class="title">Orientation date</h3>
+              <h3 class="title2">Orientation date</h3>
               <p class="description">Tue 10/11 & Wed 11/12: 8am-3pm</p>
               <span class="more">Read more</span>
             </div>
@@ -77,7 +79,7 @@
               <img src="./resources/images/information-campus.jpg" alt="Classroom with hanging lights, and map of South America">
             </div>
             <div class="data">
-              <h3 class="title">Our Campus</h3>
+              <h3 class="title2">Our Campus</h3>
               <p class="description">Find which campus is close by you</p>
               <span class="more">Read more</span>
             </div>
@@ -87,7 +89,7 @@
               <img src="./resources/images/information-guest-lecture.jpg" alt="Picture of Oliver Sack">
             </div>
             <div class="data">
-              <h3 class="title">Our guest lecture</h3>
+              <h3 class="title2">Our guest lecture</h3>
               <p class="description">Join a keynote with Oliver Sack about music in medical treatment</p>
               <span class="more">Read more</span>
             </div>
@@ -98,7 +100,7 @@
 
       <!-- Course Information -->
       <div class="course container">
-        <h1>Start learning</h1>
+        <h1 class="title">Start learning</h1>
 
         <!-- Flexbox that holds all course information -->
         <div class="courses">
@@ -157,7 +159,7 @@
 
       <!-- Thesis Exbit -->
       <div class="thesis container">
-        <h1>Thesis exhibit</h1>
+        <h1 class="title">Thesis exhibit</h1>
 
         <!-- Main Video & description -->
         <div class="mainvid">
@@ -165,7 +167,7 @@
             <video src="./resources/videos/thesis.mp4" controls poster="posterimage.jpg">
               The video failed to display.</video>
           </div>
-          <h2 class="title">Reimagine urban</h2>
+          <h2 class="title2">Reimagine urban</h2>
           <p class="description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquem et commodo lectus, nec consequat neque. Sed non accumsen urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, tristique ligula."</p>
         </div>
         <div class="secondary">
@@ -174,7 +176,7 @@
               <img src="./resources/images/thesis-fisma.jpg" alt="Fisma Thesis Image">
             </div>
             <div class="data">
-              <h3 class="title">Prisma: Design and Prototype</h3>
+              <h3 class="title2">Prisma: Design and Prototype</h3>
               <p class="description">Designer showcase of new prototype product</p>
             </div>
           </div>
@@ -183,7 +185,7 @@
               <img src="./resources/images/thesis-now-and-then.jpg" alt="Now and then Image">
             </div>
             <div class="data">
-              <h3 class="title">Now and then</h3>
+              <h3 class="title2">Now and then</h3>
               <p class="description">Research study about New York</p>
             </div>
           </div>
