add responsive header
at sizes 470px or less header changes and text navigation disapears and icons appear that span span the width of header

--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
       <!-- Logo & Left side of Header -->
       <div class="logo">
         <div class="img-container">
-          <img src="./resources/images/ic-logo.svg" alt="Company Logo">
+          <a href="#"><img src="./resources/images/ic-logo.svg" alt="Company Logo"></a>
         </div>
         <span class="bold">COLMAR</span><span class="light">ACADEMY</span>
       </div>
 
       <!-- Nav & right side of header -->
       <nav role="navigation">
-        <ul role="presentation">
+        <ul class="nav" role="presentation">
           <li><a href="#">On Campus</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">For companies</a></li>
           <li><a href="#">Sign In</a></li>
         </ul>
       </nav>
+      <div class="mobile-nav">
+        <a href="#"><img src="./resources/images/ic-on-campus.svg" alt="On campus icon"></a>
+        <a href="#"><img src="./resources/images/ic-online.svg" alt="Online Icon"></a>
+        <a href="#"><img src="./resources/images/ic-login.svg" alt="Login icon"></a>
+      </div>
     </header>
 
     <!-- Main Content -->
