add responsive info
at size 470px or less info section removes main-info and secondary events section takes up full width of page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p class="description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
           <p class="source">Emanuel, Sr Strategist at Hiring.com</p>
         </div>
-        <div class="secondary">
+        <div class="secondary event">
           <div class="info orientation">
             <div class="img-container">
               <img src="./resources/images/information-orientation.jpg" alt="Overhead view of students walking">
