add responsive course info
at 470px or less made the courses section hide img, and desc. Take up width of browser and stack on top of each other

--- a/index.html
+++ b/index.html
@@ -116,48 +116,48 @@
               <img src="./resources/images/course-software.jpg" alt="Software Engineering Image">
             </div>
             <h3>Software engineering</h3>
-            <p>COURSES</p>
-            <p>Web Development, Mobile Development, iOT, APIs</p>
+            <p class="type">COURSES</p>
+            <p class="coursedesc">Web Development, Mobile Development, iOT, APIs</p>
           </div>
           <div class="courseinfo art">
             <div class="img-container">
               <img src="./resources/images/course-computer-art.jpg" alt="Computer Art Image">
             </div>
             <h3>Computer Art</h3>
-            <p>COURSES</p>
-            <p>Image & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            <p class="type">COURSES</p>
+            <p class="coursedesc">Image & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
           </div>
           <div class="courseinfo design">
             <div class="img-container">
               <img src="./resources/images/course-design.jpg" alt="Design Image">
             </div>
             <h3>Desgin</h3>
-            <p>COURSES</p>
-            <p>User Experience Design, User Research, Visual Desgin</p>
+            <p class="type">COURSES</p>
+            <p class="coursedesc">User Experience Design, User Research, Visual Desgin</p>
           </div>
           <div class="courseinfo data">
             <div class="img-container">
               <img src="./resources/images/course-data.jpg" alt="Data Image">
             </div>
             <h3>Data</h3>
-            <p>COURSES</p>
-            <p>Data Science, Big Data, SQL, Data Visualization</p>
+            <p class="type">COURSES</p>
+            <p class="coursedesc">Data Science, Big Data, SQL, Data Visualization</p>
           </div>
           <div class="courseinfo business">
             <div class="img-container">
               <img src="./resources/images/course-business.jpg" alt="Business Image">
             </div>
             <h3>Business</h3>
-            <p>COURSES</p>
-            <p>Product Development, Business Development, Startup</p>
+            <p class="type">COURSES</p>
+            <p class="coursedesc">Product Development, Business Development, Startup</p>
           </div>
           <div class="courseinfo marketing">
             <div class="img-container">
               <img src="./resources/images/course-marketing.jpg" alt="Marketing Image">
             </div>
             <h3>Marketing</h3>
-            <p>COURSES</p>
-            <p>Analytics, Content Marketing, Mobile Marketing</p>
+            <p class="type">COURSES</p>
+            <p class="coursedesc">Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
       </div>
