--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <video src="./resources/videos/thesis.mp4" controls poster="posterimage.jpg">
               The video failed to display.</video>
           </div>
-          <h2 class="title2">Reimagine urban</h2>
-          <p class="description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquem et commodo lectus, nec consequat neque. Sed non accumsen urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, tristique ligula."</p>
+          <h2 class="vid-title">Reimagine urban</h2>
+          <p class="vid-description">"Curabitur vitae libero in ipsum porttitor consequat. Aliquem et commodo lectus, nec consequat neque. Sed non accumsen urna. Phasellus sed consequat ex. Etiam eget magna laoreet, effictur dolor consequat, tristique ligula."</p>
         </div>
         <div class="secondary">
           <div class="info Prisma">
