--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="headline">
           <h1 class="title">Learn Something new everyday</h1>
           <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-          <div class="button">
+          <a href="#learn"><div class="button">
             <span>Start here</span>
-          </div>
+          </div></a>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
             <div class="data">
               <h3 class="title2">Orientation date</h3>
               <p class="description">Tue 10/11 & Wed 11/12: 8am-3pm</p>
-              <span class="more">Read more</span>
+              <a href="#"><span class="more">Read more</span></a>
             </div>
           </div>
           <div class="info campus">
@@ -86,7 +86,7 @@
             <div class="data">
               <h3 class="title2">Our Campus</h3>
               <p class="description">Find which campus is close by you</p>
-              <span class="more">Read more</span>
+              <a href="#"><span class="more">Read more</span></a>
             </div>
           </div>
           <div class="info lecture">
@@ -96,7 +96,7 @@
             <div class="data">
               <h3 class="title2">Our guest lecture</h3>
               <p class="description">Join a keynote with Oliver Sack about music in medical treatment</p>
-              <span class="more">Read more</span>
+              <a href="#"><span class="more">Read more</span></a>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
       </div>
 
       <!-- Course Information -->
-      <div class="course container">
+      <div class="course container" id="learn">
         <h1 class="title">Start learning</h1>
 
         <!-- Flexbox that holds all course information -->
